--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -11,7 +11,7 @@
         <div class="col-12 col-lg-6">
             <MudText Typo="Typo.h3">Hi! My name is Ryan!</MudText>
             <MudContainer Class="mt-6">
-                <MudText Typo="Typo.h6">I'm a Game Developer!</MudText>
+                <MudText Typo="Typo.h6">I'm a Software Engineer!</MudText>
             </MudContainer>
         </div>
         <div class="col-12 col-lg-6">
