--- a/Components/Pages/Base/Resume.razor
+++ b/Components/Pages/Base/Resume.razor
@@ -41,7 +41,7 @@
                                 <h3>Education</h3>
                                 <div class="row">
                                     <div class="col-md-12 mb-4">
-                                        <h4>University of Phoenix, Phoenix, Arizona (Online)</h4>
+                                        <h4>University of Phoenix, Phoenix, Arizona</h4>
                                         <p>Bachelor of Computer Science | 2022 - 2024 </p>
                                         <ul>
                                             <li>Data Programming Languages</li>
