--- a/Components/Pages/Base/Resume.razor
+++ b/Components/Pages/Base/Resume.razor
@@ -4,11 +4,10 @@
     <MudContainer>
         <div class="d-flex mb-3 justify-content-end">
             <div class="align-content-center">
-                <a href="https://onedrive.live.com/download?resid=324C3E78566D9F53%2152807&authkey=!AHXgtazQR54FMWI&em=2" class="btn btn-primary">Download</a>
+                <a href="https://onedrive.live.com/embed?resid=324C3E78566D9F53%2153482&authkey=!ALAoi0ma60Poiag&em=2" class="btn btn-primary">Download</a>
             </div>
         </div>
     </MudContainer>
-    <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1XKmXbyYVlr8QnR6vtiWb75HMgya9XKL0TjZ15y-dc80&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
     <div class="d-flex justify-content-center">
         <div class="col-12 d-flex justify-content-center">
             <div class="mb-3">
@@ -29,11 +28,11 @@
                             <section class="mb-5">
                                 <h3>Skills & Technology</h3>
                                 <ul>
-                                    <li>Proficient in C#, .NET, Azure, and Unity.</li>
-                                    <li>Experienced in game development with a strong understanding of coding conventions and SOLID principles.</li>
-                                    <li>Familiar with various forms of version control, including git and perforce.</li>
-                                    <li>Knowledgeable in the Software Development process using Agile methodologies, including Scrum and Kanban.</li>
-                                    <li>Experience with Photoshop and Blender.</li>
+                                    <li>&emsp; Proficient in C#, .NET, and Unity.</li>
+                                    <li>&emsp; Experienced in game development with a strong understanding of coding conventions and SOLID principles.</li>
+                                    <li>&emsp; Familiar with various forms of version control, including git and perforce.</li>
+                                    <li>&emsp; Knowledgeable in the Software Development process using Agile methodologies, including Scrum and Kanban.</li>
+                                    <li>&emsp; Experience with Photoshop and Blender.</li>
                                 </ul>
                             </section>
 
@@ -41,20 +40,20 @@
                                 <h3>Education</h3>
                                 <div class="row">
                                     <div class="col-md-12 mb-4">
-                                        <h4>University of Phoenix, Phoenix, Arizona</h4>
-                                        <p>Bachelor of Computer Science | 2022 - 2024 </p>
+                                        <h4>&ensp; University of Phoenix, Phoenix, Arizona (Online)</h4>
+                                        <h5>&ensp; Bachelor of Computer Science - GPA: 3.5 (2022 - 2024)</h5>
                                         <ul>
-                                            <li>Data Programming Languages</li>
-                                            <li>Java Programming I</li>
-                                            <li>Linear Algebra</li>
-                                            <li>Intro to Networking</li>
+                                            <li>&emsp; Data Programming Languages</li>
+                                            <li>&emsp; Java Programming I & II</li>
+                                            <li>&emsp; Linear Algebra</li>
+                                            <li>&emsp; Intro to Networking</li>
                                         </ul>
                                     </div>
                                     <div class="col-md-12 mb-4">
-                                        <h4>California State University, San Bernardino, California</h4>
-                                        <p>Studies toward Computer Science | 2016-2018 </p>
+                                        <h4>&ensp; California State University, San Bernardino, California</h4>
+                                        <p>&ensp;Studies toward Computer Science (2016-2018)</p>
                                         <ul>
-                                            <li>Led a team of 3 in creating a 2D platformer with C# and the Unity Engine.</li>
+                                            <li>&emsp; Led a team of 3 in creating a 2D platformer with C# and the Unity Engine.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -62,10 +61,10 @@
 
                             <section class="mb-5">
                                 <h3>Certificates</h3>
-                                <h4>CS50x - CS50 Certificate (December 2022)</h4>
+                                <h4>&ensp; CS50x - CS50 Certificate</h4>
                                 <ul>
-                                    <li>Completed the CS50x course, covering various programming languages and frameworks, including C, C++, JavaScript, HTML, CSS, Python, and Flask.</li>
-                                    <li>Designed and built a mini-game in LUA.</li>
+                                    <li>&emsp; Completed the CS50x course, covering various programming languages and frameworks, including C, C++, JavaScript, HTML, CSS, Python, and Flask.</li>
+                                    <li>&emsp; Designed and built a mini-game in LUA.</li>
                                 </ul>
                             </section>
 
@@ -73,25 +72,32 @@
                                 <h3>Projects</h3>
                                 <ul class="list-unstyled">
                                     <li class="mb-4">
-                                        <h4>HopScape (Lead Programmer) -</h4>
+                                        <h4>&ensp; HopScape</h4>
                                         <a href="https://github.com/RyanFloresTT/Hopscape">GitHub</a> -
                                         <a href="https://ryanflorestt.itch.io/hopscape">Itch.io</a>
                                         <ul>
-                                            <li>Using Unity, led a team of 5 to create a top-down puzzle adventure game made for GBJAM11.</li>
+                                            <li>&emsp; Using Unity, led a team of 5 to create a top-down puzzle adventure game made for GBJAM11.</li>
                                         </ul>
                                     </li>
                                     <li class="mb-4">
-                                        <h4>TrustyBot (Solo Project) -</h4>
+                                        <h4>&ensp; TrustyBot</h4>
                                         <a href="https://github.com/RyanFloresTT/TrustyBot">GitHub</a>
                                         <ul>
-                                            <li>A Discord bot showcasing custom commands, extension methods, organized game data, and HTTP requests.</li>
+                                            <li>&emsp; A Discord bot showcasing custom commands, extension methods, organized game data, and HTTP requests.</li>
                                         </ul>
                                     </li>
                                     <li class="mb-4">
-                                        <h4>Crystal Chaos (Solo Project) -</h4>
+                                        <h4>&ensp; Super Hangman</h4>
+                                        <a href="https://store.steampowered.com/app/2910810/Super_Hangman/">Steam</a>
+                                        <ul>
+                                            <li>&emsp; Worked with another developer to create, design, and release a Hangman game on Steam.</li>
+                                        </ul>
+                                    </li>
+                                    <li class="mb-4">
+                                        <h4>&ensp; Crystal Chaos</h4>
                                         <a href="https://github.com/RyanFloresTT/TowerDefenseGame">GitHub</a>
                                         <ul>
-                                            <li>Unity game project demonstrating knowledge of C# programming. Designed a tower defense game, and implemented features such as an ability system, enemy spawning, and UI enhancements. Leveraged Object Pooling and Scriptable Objects for efficient resource management.</li>
+                                            <li>&emsp; Unity game project demonstrating knowledge of C# programming. Designed a tower defense game, and implemented features such as an ability system, enemy spawning, and UI enhancements. Leveraged Object Pooling and Scriptable Objects for efficient resource management.</li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -101,18 +107,17 @@
                                 <h3>Experience</h3>
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <h4>Palm Springs Baking Co., Palm Springs, California (2017-Present)</h4>
-                                        <p>Quality Assurance Manager</p>
+                                        <h4>&ensp; Palm Springs Baking Co., Palm Springs, California (2017-Present)</h4>
+                                        <p>&emsp; Quality Assurance Manager</p>
                                         <ul>
-                                            <li>Improved bakery operations by creating custom Excel spreadsheets and visualizations for enhanced data tracking and analysis.</li>
-                                            <li>Developed VBA macros that automated printing, streamlined order, and label generation.</li>
-                                            <li>Collaborated with others to efficiently load and unload delivery trucks and work together to create the sourdough sponge we make every day.</li>
+                                            <li>&emsp; Improved bakery operations by creating custom Excel spreadsheets and visualizations for enhanced data tracking and analysis.</li>
+                                            <li>&emsp; Developed VBA macros that automated printing, streamlined order, and label generation.</li>
+                                            <li>&emsp; Collaborated with others to efficiently load and unload delivery trucks and work together to create the sourdough sponge we make every day.</li>
                                         </ul>
                                     </div>
                                 </div>
                             </section>
                         </div>
-
                     </div>
                 </div>
             </div>
