--- a/Components/Pages/Base/Resume.razor
+++ b/Components/Pages/Base/Resume.razor
@@ -27,33 +27,33 @@
 
                             <section class="mb-5">
                                 <h3>Skills & Technology</h3>
-                                <ul>
-                                    <li>&emsp; Proficient in C#, .NET, and Unity.</li>
-                                    <li>&emsp; Experienced in game development with a strong understanding of coding conventions and SOLID principles.</li>
-                                    <li>&emsp; Familiar with various forms of version control, including git and perforce.</li>
-                                    <li>&emsp; Knowledgeable in the Software Development process using Agile methodologies, including Scrum and Kanban.</li>
-                                    <li>&emsp; Experience with Photoshop and Blender.</li>
+                                <ul class="px-4">
+                                    <li>Proficient in C#, .NET, and Unity.</li>
+                                    <li>Experienced in game development with a strong understanding of coding conventions and SOLID principles.</li>
+                                    <li>Familiar with various forms of version control, including git and perforce.</li>
+                                    <li>Knowledgeable in the Software Development process using Agile methodologies, including Scrum and Kanban.</li>
+                                    <li>Experience with Photoshop and Blender.</li>
                                 </ul>
                             </section>
 
                             <section class="mb-5">
                                 <h3>Education</h3>
                                 <div class="row">
-                                    <div class="col-md-12 mb-4">
-                                        <h4>&ensp; University of Phoenix, Phoenix, Arizona (Online)</h4>
-                                        <h5>&ensp; Bachelor of Computer Science - GPA: 3.5 (2022 - 2024)</h5>
-                                        <ul>
-                                            <li>&emsp; Data Programming Languages</li>
-                                            <li>&emsp; Java Programming I & II</li>
-                                            <li>&emsp; Linear Algebra</li>
-                                            <li>&emsp; Intro to Networking</li>
+                                    <div class="col-md-12 mb-4 px-4">
+                                        <h4>University of Phoenix, Phoenix, Arizona (Online)</h4>
+                                        <h5 class="px-2">Bachelor of Computer Science - GPA: 3.5 (2022 - 2024)</h5>
+                                        <ul class="px-4">
+                                            <li>Data Programming Languages</li>
+                                            <li>Java Programming I & II</li>
+                                            <li>Linear Algebra</li>
+                                            <li>Intro to Networking</li>
                                         </ul>
                                     </div>
-                                    <div class="col-md-12 mb-4">
-                                        <h4>&ensp; California State University, San Bernardino, California</h4>
-                                        <p>&ensp;Studies toward Computer Science (2016-2018)</p>
-                                        <ul>
-                                            <li>&emsp; Led a team of 3 in creating a 2D platformer with C# and the Unity Engine.</li>
+                                    <div class="col-md-12 mb-4 px-4">
+                                        <h4>California State University, San Bernardino, California</h4>
+                                        <h5 class="px-2">Studies toward Computer Science (2016-2018)</h5>
+                                        <ul class="px-4">
+                                            <li>Led a team of 3 in creating a 2D platformer with C# and the Unity Engine.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -61,43 +61,43 @@
 
                             <section class="mb-5">
                                 <h3>Certificates</h3>
-                                <h4>&ensp; CS50x - CS50 Certificate</h4>
-                                <ul>
-                                    <li>&emsp; Completed the CS50x course, covering various programming languages and frameworks, including C, C++, JavaScript, HTML, CSS, Python, and Flask.</li>
-                                    <li>&emsp; Designed and built a mini-game in LUA.</li>
+                                <h4 class="px-4">CS50x - CS50 Certificate</h4>
+                                <ul class="px-8">
+                                    <li>Completed the CS50x course, covering various programming languages and frameworks, including C, C++, JavaScript, HTML, CSS, Python, and Flask.</li>
+                                    <li>Designed and built a mini-game in LUA.</li>
                                 </ul>
                             </section>
 
                             <section class="mb-5">
-                                <h3>Projects</h3>
-                                <ul class="list-unstyled">
+                                <h3 class="px-4">Projects</h3>
+                                <ul class="px-4">
                                     <li class="mb-4">
-                                        <h4>&ensp; HopScape</h4>
+                                        <h4>HopScape</h4>
                                         <a href="https://github.com/RyanFloresTT/Hopscape">GitHub</a> -
                                         <a href="https://ryanflorestt.itch.io/hopscape">Itch.io</a>
-                                        <ul>
-                                            <li>&emsp; Using Unity, led a team of 5 to create a top-down puzzle adventure game made for GBJAM11.</li>
+                                        <ul class="px-4">
+                                            <li>Using Unity, led a team of 5 to create a top-down puzzle adventure game made for GBJAM11.</li>
                                         </ul>
                                     </li>
                                     <li class="mb-4">
-                                        <h4>&ensp; TrustyBot</h4>
+                                        <h4>TrustyBot</h4>
                                         <a href="https://github.com/RyanFloresTT/TrustyBot">GitHub</a>
-                                        <ul>
-                                            <li>&emsp; A Discord bot showcasing custom commands, extension methods, organized game data, and HTTP requests.</li>
+                                        <ul class="px-4">
+                                            <li>A Discord bot showcasing custom commands, extension methods, organized game data, and HTTP requests.</li>
                                         </ul>
                                     </li>
                                     <li class="mb-4">
-                                        <h4>&ensp; Super Hangman</h4>
+                                        <h4>Super Hangman</h4>
                                         <a href="https://store.steampowered.com/app/2910810/Super_Hangman/">Steam</a>
-                                        <ul>
-                                            <li>&emsp; Worked with another developer to create, design, and release a Hangman game on Steam.</li>
+                                        <ul class="px-4">
+                                            <li>Worked with another developer to create, design, and release a Hangman game on Steam.</li>
                                         </ul>
                                     </li>
                                     <li class="mb-4">
-                                        <h4>&ensp; Crystal Chaos</h4>
+                                        <h4>Crystal Chaos</h4>
                                         <a href="https://github.com/RyanFloresTT/TowerDefenseGame">GitHub</a>
-                                        <ul>
-                                            <li>&emsp; Unity game project demonstrating knowledge of C# programming. Designed a tower defense game, and implemented features such as an ability system, enemy spawning, and UI enhancements. Leveraged Object Pooling and Scriptable Objects for efficient resource management.</li>
+                                        <ul class="px-4">
+                                            <li>Unity game project demonstrating knowledge of C# programming. Designed a tower defense game, and implemented features such as an ability system, enemy spawning, and UI enhancements. Leveraged Object Pooling and Scriptable Objects for efficient resource management.</li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -107,12 +107,12 @@
                                 <h3>Experience</h3>
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <h4>&ensp; Palm Springs Baking Co., Palm Springs, California (2017-Present)</h4>
-                                        <p>&emsp; Quality Assurance Manager</p>
-                                        <ul>
-                                            <li>&emsp; Improved bakery operations by creating custom Excel spreadsheets and visualizations for enhanced data tracking and analysis.</li>
-                                            <li>&emsp; Developed VBA macros that automated printing, streamlined order, and label generation.</li>
-                                            <li>&emsp; Collaborated with others to efficiently load and unload delivery trucks and work together to create the sourdough sponge we make every day.</li>
+                                        <h4 class="px-4">Palm Springs Baking Co., Palm Springs, California (2017-Present)</h4>
+                                        <p>Quality Assurance Manager</p>
+                                        <ul class="px-8">
+                                            <li>Improved bakery operations by creating custom Excel spreadsheets and visualizations for enhanced data tracking and analysis.</li>
+                                            <li>Developed VBA macros that automated printing, streamlined order, and label generation.</li>
+                                            <li>Collaborated with others to efficiently load and unload delivery trucks and work together to create the sourdough sponge we make every day.</li>
                                         </ul>
                                     </div>
                                 </div>
