--- a/Components/Pages/Base/Resume.razor
+++ b/Components/Pages/Base/Resume.razor
@@ -69,7 +69,7 @@
                             </section>
 
                             <section class="mb-5">
-                                <h3 class="px-4">Projects</h3>
+                                <h3>Projects</h3>
                                 <ul class="px-4">
                                     <li class="mb-4">
                                         <h4>HopScape</h4>
@@ -122,5 +122,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>f
 </MudContainer>
